[package]
name = "hello_3d_shapes"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.15.1" }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.39"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.68", features = ["HtmlCanvasElement"] }

[profile.release]
opt-level = "s"
