[package]
name = "mrts_menu"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
ahash = "^0.8"
rand = "^0.8"
mathio = "^0.2"
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy_lunex = "0.0.11"
# bevy_lunex = { path = "../@bevy_lunex" }
# bevy_lunex = { git = "https://github.com/bytestring-net/bevy-lunex" }

[package.metadata.clippy]
# List of lints to allow, in addition to those allowed by default
# (optional)
allow = ["clippy::needless_return", "clippy::redundant_field_names"]
# List of lints to deny (optional)
deny = ["clippy::all"]
# List of lints to warn about (optional)
warn = ["clippy::pedantic"]
# List of lints to allow in tests (optional)
# (this overrides 'allow' and 'deny' for tests)
allow_tests = ["clippy::result_unwrap_used"]
# List of lints to deny in tests (optional)
# (this overrides 'allow' and 'deny' for tests)
deny_tests = ["clippy::panic"]
# Additional arguments to pass to clippy (optional)
# (these override the defaults, so be careful)
args = ["-D", "warnings", "--cap-lints", "warn"]
