[package]
name = "adventure"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0", features = [
    "dynamic_linking", # Faster compilation times during development
] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
opt-level = 3     # Maximum optimization
lto = "thin"      # Enable Link Time Optimization (thin is a good balance)
codegen-units = 1 # Maximum size reduction optimizations
strip = true      # Strip debug symbols
panic = "abort"   # Remove panic unwinding code
debug = false     # No debug symbols

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
