[package]
name = "bevy-hello-2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bevy-hello-bin"
path = "src/main.rs"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }

[package.metadata.clippy]
# List of lints to allow, in addition to those allowed by default
# (optional)
allow = ["clippy::needless_return", "clippy::redundant_field_names"]
# List of lints to deny (optional)
deny = ["clippy::all"]
# List of lints to warn about (optional)
warn = ["clippy::pedantic"]
# List of lints to allow in tests (optional)
# (this overrides 'allow' and 'deny' for tests)
allow_tests = ["clippy::result_unwrap_used"]
# List of lints to deny in tests (optional)
# (this overrides 'allow' and 'deny' for tests)
deny_tests = ["clippy::panic"]
# Additional arguments to pass to clippy (optional)
# (these override the defaults, so be careful)
args = ["-D", "warnings", "--cap-lints", "warn"]
